--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ecopolluters is a non-profit organisation that aims at connecting individuals with the environment by fighting ignorance"
+      content="ecopolluters aims at making human society sustainable by empowering individual behavioural change."
     />
     <link rel="apple-touch-icon" href="logo.png" />
     <!--
