--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       name="description"
       content="ecopolluters aims at making human society sustainable by empowering individual behavioural change."
     />
+    <!-- try to add a meta image in line below: -->
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" /> 
     <link rel="apple-touch-icon" href="logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
