--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,16 @@
       content="ecopolluters aims at making human society sustainable by empowering individual behavioural change."
     />
     <!-- try to add a meta image in line below: -->
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png" /> 
+    <!-- <meta property="og:image" content="%PUBLIC_URL%/logo.png" />  -->
+
+    <!-- trying a new sharing image -->
+    <meta property="og:image" content="https://ecopolluters.org/static/media/impact-empty-state.bfc69704.png">
+    <!-- <meta property="og:image:type" content="image/jpeg"> -->
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
+
+
+
     <link rel="apple-touch-icon" href="logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
